ns.yaml
---
apiVersion: v1
kind: Namespace                 
metadata:
  name: ucsbbq
  labels:
    pds.portworx.com/available: "true"
