frontend.yaml
---
apiVersion: apps/v1
kind: Deployment                 
metadata:
  name: ucsbbq-web  
  namespace: ucsbbq         
spec:
  replicas: 3      
  selector:
    matchLabels:
      app: ucsbbq-web
  template:                      
    metadata:
      labels:                    
        app: ucsbbq-web
    spec: 
      imagePullSecrets:
          - name: docker    
      containers:
      - name: ucsbbq-web
        image: pkoppa/ucsbbq
        imagePullPolicy: Always
        ports:
          - containerPort: 8080    
---
apiVersion: v1
kind: Service
metadata:
  name: ucsbbq-svc
  namespace: ucsbbq
  labels:
    app: ucsbbq-web
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
  selector:
    app: ucsbbq-web
