route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
        name: ucsbbq-svc
spec:
  to:
    kind: Service
    name: ucsbbq-svc
